Attempt at fixing swagger.json - can't retrieve models defined in it to use for the post/put requests
